--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,17 @@ jobs:
       - run: npm run build --if-present
 
       - run: npm test
+
+      depoly:
+        needs: build
+        runs-on: unbunto-latest
+        steps:
+            - uses: actions/checkout@master
+            - uses: jakejarvis/s3-sync-action@master
+            with:
+              args: --acl public-read --follow-symlinks --delete
+            env:
+              AWS_S3_BUCKET:  ${{ SECRETS.AWS_S3_BUCKET  }}
+              AWS_ACCESS_KEY:  ${{ SECRETS.AWS_S3_BUCKET  }} 
+              AWS_ACCESS_SECRET:  ${{ SECRETS.AWS_S3_BUCKET  }} 
+              AWS_REGION: "us-east-1"
