--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,8 @@ jobs:
       - run: npm run build --if-present
 
       - run: npm test
+        env:
+          CI: true
 
       depoly:
         needs: build
@@ -42,6 +44,6 @@ jobs:
               args: --acl public-read --follow-symlinks --delete
             env:
               AWS_S3_BUCKET:  ${{ SECRETS.AWS_S3_BUCKET  }}
-              AWS_ACCESS_KEY:  ${{ SECRETS.AWS_S3_BUCKET  }} 
-              AWS_ACCESS_SECRET:  ${{ SECRETS.AWS_S3_BUCKET  }} 
+              AWS_ACCESS_KEY_ID:  ${{ SECRETS.AWS_S3_BUCKET  }} 
+              AWS_SECRET_ACCESS_KEY:  ${{ SECRETS.AWS_S3_BUCKET  }} 
               AWS_REGION: "us-east-1"
