--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "little tiers",
   "main": "http_server.js",
   "scripts": {
-    "test": "jest",
+    "test": "echo \"Error: no test specified\"",
     "start": "node http_server.js"
   },
   "repository": {
