--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,20 @@ jobs:
       - run: npm run build --if-present
 
       - run: npm test
+        env:
+          CI: true
 
+      depoly:
+        needs: build
+        runs-on: unbunto-latest
+        steps:
+            - uses: actions/checkout@master
+            - uses: jakejarvis/s3-sync-action@master
+            with:
+              args: --acl public-read --follow-symlinks --delete
+            env:
+              AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }} 
+              AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+              AWS_REGION: "us-east-1"
+          - name: Copy to S3
+            run: aws s3 sync ./build/. s3://jd-littletiers
