--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
         steps:
             - uses: actions/checkout@master
             - uses: jakejarvis/s3-sync-action@master
+            - uses: aws-actions/configure-aws-credentials@v1
             with:
               args: --acl public-read --follow-symlinks --delete
             env:
