--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,9 +9,7 @@ jobs:
     steps:
       - name: Show the demo running
         env:
-          VAR1: This is
-          VAR2: A Demo of
-          VAR3: GitHub Actions
-          VAR4: Workflow jobs
+          Greeting: Hello
         run: |
-          echo $VAR1 $VAR2 $VAR3 $VAR4.
+          -name: "Say Hello"
+           echo "Hello Happy $DAY_OF_WEEK!"
